# cedar-bug

./: Cargo.toml  README.md
android_binding/: .gitignore  Cargo.toml
android_binding/androidProj/: settings.gradle.kts
android_binding/androidProj/app/: build.gradle.kts
android_binding/androidProj/app/src/main/java/com/example/androidproj/: MainActivity.kt
android_binding/androidProj/app/src/main/java/com/example/rust_android/uniffi/mobile/: mobile.kt
android_binding/androidProj/gradle/: libs.versions.toml
android_binding/androidProj/gradle/wrapper/: gradle-wrapper.properties
android_binding/src/: lib.rs
main/: Cargo.toml
main/src/: lib.rs
